fix: fixed z-index of popup

--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -11,4 +11,5 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity .2s linear, visibility .2s linear;
+    z-index: 4;
 }
